# mps-cli

./: .gitignore  Readme.md
mps-cli-py/: Readme.md  main.py  pyproject.toml
mps-cli-py/model/: SConcept.py  SLanguage.py  SModel.py  SNode.py  SRepository.py  SSolution.py
mps-cli-py/model/builder/: SLanguageBuilder.py  SModelBuilderBase.py  SModelBuilderDefaultPersistency.py  SModelBuilderFilePerRootPersistency.py  SSolutionBuilder.py  SSolutionsRepositoryBuilder.py
mps-cli-py/src/mpscli/: demo.py  demo_language_extraction.py
mps-cli-py/src/mpscli/model/: NodeList.py  SConcept.py  SLanguage.py  SModel.py  SModule.py  SNode.py  SNodeRef.py  SRepository.py  SSolution.py
mps-cli-py/src/mpscli/model/builder/: BuilderFilter.py  NodeIdEncodingUtils.py  SLanguageBuilder.py  SModelBuilderBase.py  SModelBuilderBinaryPersistency.py  SModelBuilderDefaultPersistency.py  SModelBuilderFilePerRootPersistency.py  SModuleBuilder.py  (+4 more)
mps-cli-py/src/mpscli/structuregen/: StructureFromLanguageGenerator.py
mps-cli-py/tests/: context.py  test_base.py  test_binary_format_parity.py  test_binary_header.py  test_binary_imports.py  test_binary_language_from_mpl.py  test_binary_library_top.py  test_binary_node_tree.py  test_binary_performance.py  test_binary_persistency_low_level_access.py  test_binary_references.py  test_binary_registry.py  test_binary_repository.py  test_binary_repository_completeness.py  test_builder_filter.py  test_language_extraction.py  test_model_attributes.py  test_modules_and_models.py  test_node_id_encoding_utils.py  test_nodes.py  test_string_utils.py
mps-cli-py/tests/binary/: Readme.md  test_binary_cross_module_ref.py  test_binary_format_parity.py  test_binary_header.py  test_binary_imports.py  test_binary_library_top.py  test_binary_node_tree.py  test_binary_performance.py  test_binary_persistency_low_level_access.py  test_binary_references.py  test_binary_registry.py  test_binary_repository.py  test_binary_repository_completeness.py
mps-cli-py/tests/structure/: test_language_structure_builder.py  test_language_structure_generator.py  test_list_extensions.py  test_parse_with_structure_aware_classes.py  test_structure_aware_node_finder.py
mps-cli-rs/: Cargo.toml  Readme.md
mps-cli-rs/src/: lib.rs  main.rs
mps-cli-rs/src/builder/: builder_helper.rs  mod.rs  node_id_utils.rs  playground.rs  root_node_from_mpsr_file_builder.rs  slanguage_builder.rs  smodel_builder_base.rs  smodel_builder_binary_persistency.rs  smodel_builder_binary_persistency_constants.rs  smodel_builder_binary_persistency_utils.rs  smodel_builder_default_persistency.rs  smodel_builder_file_per_root_persistency.rs  smodule_builder_from_jars.rs  smodules_repository_builder.rs  ssolution_builder.rs  test_helper.rs
mps-cli-rs/src/model/: mod.rs  sconcept.rs  slanguage.rs  smodel.rs  snode.rs  snoderef.rs  srepository.rs  ssolution.rs
mps-cli-rs/tests/: binary_persistency_utils_tests.rs  default_persistency_tests.rs  file_per_root_persistency_tests.rs  jars_persistency_tests.rs  model_completeness_tests.rs
(+218 files in other folders)
