[package]
name = "mps-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/mps_cli_lib.rs"

[features]
default = []
std = []

[dependencies]
walkdir = "2.5.0"
roxmltree = "0.20.0"

[profile.release]
lto = "fat"
codegen-units = 1