[package]
name = "mps-cli"
version = "0.1.0"
edition = "2021"
license = "Eclipse Public License - v 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
default = []
std = []

[dependencies]
walkdir = "2.5.0"
roxmltree = "0.20.0"
zip = "2.1.5"

[profile.release]
lto = "fat"
codegen-units = 1
